homework week 1 day 5

--- a/index.html
+++ b/index.html
@@ -2,208 +2,222 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
 
 
-    <div id="square"></div>
-    <hr/>
-    <div id="circle"></div>
+	<div id="square"></div>
+	<hr />
+	<div id="circle"></div>
 
-    <hr>
-    <table class="rounded">
-        <tbody>
-            <tr>
-                <th>Company</th>
-                <th>Q1</th>
-                <th>Q2</th>
-                <th>Q3</th>
-                <th>Q4</th>
-            </tr>
-            <tr>
-                <td>Microsoft</td>
-                <td>20.3</td>
-                <td>30.5</td>
-                <td>23.5</td>
-                <td>40.3</td>
-            </tr>
-            <tr>
-                <td>Google</td>
-                <td>50.2</td>
-                <td>40.63</td>
-                <td>45.23</td>
-                <td>39.3</td>
-            </tr>
-            <tr>
-                <td>Apple</td>
-                <td>25.4</td>
-                <td>30.2</td>
-                <td>33.3</td>
-                <td>36.7</td>
-            </tr>
-            <tr>
-                <td>IBM</td>
-                <td>20.4</td>
-                <td>15.6</td>
-                <td>22.3</td>
-                <td>29.3</td>
-            </tr>
-        </tbody>
-    </table>
+	<hr>
+	<table class="rounded">
+		<tbody>
+			<tr>
+				<th>Company</th>
+				<th>Q1</th>
+				<th>Q2</th>
+				<th>Q3</th>
+				<th>Q4</th>
+			</tr>
+			<tr>
+				<td>Microsoft</td>
+				<td>20.3</td>
+				<td>30.5</td>
+				<td>23.5</td>
+				<td>40.3</td>
+			</tr>
+			<tr>
+				<td>Google</td>
+				<td>50.2</td>
+				<td>40.63</td>
+				<td>45.23</td>
+				<td>39.3</td>
+			</tr>
+			<tr>
+				<td>Apple</td>
+				<td>25.4</td>
+				<td>30.2</td>
+				<td>33.3</td>
+				<td>36.7</td>
+			</tr>
+			<tr>
+				<td>IBM</td>
+				<td>20.4</td>
+				<td>15.6</td>
+				<td>22.3</td>
+				<td>29.3</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <hr>
+	<hr>
 
-    <span> f(x) = a<sub>0</sub> + a <sub>1</sub>x + ... + a <sub>n-1</sub>x<sup>n-1</sup> + a<sub>n</sub>x<sup>
-        n
-    </sup> </span>
+	<span> f(x) = a<sub>0</sub> + a <sub>1</sub>x + ... + a <sub>n-1</sub>x<sup>n-1</sup> + a<sub>n</sub>x<sup>
+			n
+		</sup> </span>
 
-    <hr>
+	<hr>
 
-    <nav class="link">
-        <a href="#one">Link 1</a>
-        <a href="#two">Link 2</a>
-        <a href="#three">Link 3</a>
-    </nav>
+	<nav class="link">
+		<a href="#one">Link 1</a>
+		<a href="#two">Link 2</a>
+		<a href="#three">Link 3</a>
+	</nav>
 
-    <hr>
-
-
-
-    <hr>
-
-    <div class="diagramma">
-        <p>75<span>&#37;</span></p>
-    </div>
-
-    <hr>
-
-    <form class="registration">
-
-        <h1>Регистрация пользователя</h1>
+	<hr>
 
 
 
-        <label for="userName">*Обязательное поле</label>
+	<hr>
+
+	<div class="diagramma">
+		<p class="diag-text">75<span>&#37;</span></p>
+	</div>
+
+	<hr>
+
+	<form class="reg-form" action="">
+		<div class="form-wrap">
+			<h2>Регистрация пользователя</h2>
+			<label for="req" class="req">*Обязательное поле</label>
+			<p class="fw1">
+				<label for="f1">Имя*</label>
+				<input type="text">
+			</p>
+			<p class="fw2">
+				<label for="f2">Логин*</label>
+				<input type="email">
+			</p>
+			<p class="fw3">
+				<label for="f3">Пароль*</label>
+				<input type="password">
+			</p>
+			<p class="fw4">
+				<label for="f4">Повтор пароля*</label>
+				<input type="password">
+			</p>
+			<p class="fw5">
+				<label for="f5" class="mail">Адрес электронный <br> почты*</label>
+				<input type="email">
+			</p>
+			<p class="fw6">
+				<label for="f6" class="mail">Потверждение адреса <br> электронной почты*</label>
+				<input type="email">
+			</p>
+			<div class="block-button">
+				<button class="button-one">Регистрация</button>
+				<button class="button-two">Отмена</button>
+			</div>
+		</div>
+	</form>
+
+	<hr />
+
+	<div class="menu--0">
+		<ul class="list">
+			<li class="li-file"><a class="file" href="#">Файл</a>
+				<ul class="ul-file">
+					<a href="#">Новый</a>
+					<a href="#">Открыть</a>
+					<a href="#">Сохранить</a>
+					<a href="#">Закрыть</a>
+				</ul>
+			</li>
+		</ul>
+	</div>
 
 
-        <label for="userName">Имя*<input type="text" name="name" id="userName"></label>
 
 
+	<hr />
 
-        <label for="userName">Логин*<input type="text" name="login" id="userLogin">
-</label>
+	<nav class="top-menu">
+		<ul class="menu-main">
+			<li><a href="" class="current">Work</a></li>
+			<li><a href="">About</a></li>
+			<li><a href="">Blog</a></li>
+			<li><a href="">Contact</a></li>
+		</ul>
+	</nav>
 
-        <label for="userPassword">Пароль*<input type="text" name="password" id="userPassword">
-</label>
+	<hr />
 
-        <label for="userRepeadPassword">Повтор пароля*<input type="text" name="RepeadPassword" id="userRepeadPassword"></label>
-
-        <label for="userName">Адрес электронной <br> почты*            <input type="text" name="email" id="userEmail">
-</label>
-
-        <label for="userEmail">Подтверждение адреса <br> электронной почты* <input type="text " name="Email " id="userEmail ">
-</label>
-
-
-        <button class="button-1" type="submit">Регистрация</button>
-        <button class="button-2" type="reset">Отмена</button>
-
-    </form>
-
-    <hr/>
-
-    <div class="menu--0">
-        <ul class="list">
-            <li class="li-file"><a class="file" href="#">Файл</a>
-                <ul class="ul-file">
-                    <a href="#">Новый</a>
-                    <a href="#">Открыть</a>
-                    <a href="#">Сохранить</a>
-                    <a href="#">Закрыть</a>
-                </ul>
-            </li>
-        </ul>
-    </div>
+	<div class="flag">
+		<div class="white"></div>
+		<div class="blue"></div>
+		<div class="red"></div>
+	</div>
 
 
+	<hr />
+	<div class="japan-flag"></div>
 
+	<hr />
 
-    <hr/>
+	<div class="button-3">
+		<a class="button3" href="">Кнопка 1</a>
+	</div>
 
-    <nav class="top-menu">
-        <ul class="menu-main">
-            <li><a href="" class="current">Work</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contact</a></li>
-        </ul>
-    </nav>
+	<hr />
 
-    <hr/>
+	<div class="block">
+		<div class="block-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo vitae veritatis fugit. Iste
+			sapiente alias quae repudiandae quibusdam incidunt eum fugit quidem voluptate voluptatum, ipsam unde maiores ex,
+			assumenda enim!
+		</div>
+	</div>
 
-    <div class="flag">
-        <div class="white"></div>
-        <div class="blue"></div>
-        <div class="red"></div>
-    </div>
+	<div class="vertical-menu">
 
+		<ul>
 
-    <hr/>
-    <div class="japan-flag"></div>
+			<li><a href="#">Menu item 1</a></li>
 
-    <hr/>
+			<li><a href="#">Menu item 2</a></li>
 
-    <div class="button-3">
-        <a class="button3" href="">Кнопка 1</a>
-    </div>
+			<li><a href="#">Menu item 3</a></li>
 
-    <hr/>
+			<li><a href="#">Menu item 4</a></li>
 
-    <div class="block">
-        <div class="block-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo vitae veritatis fugit. Iste sapiente alias quae repudiandae quibusdam incidunt eum fugit quidem voluptate voluptatum, ipsam unde maiores ex, assumenda enim!
-        </div>
-    </div>
-
-    <div class="vertical-menu">
-
-        <ul>
-
-            <li><a href="#">Menu item 1</a></li>
-
-            <li><a href="#">Menu item 2</a></li>
-
-            <li><a href="#">Menu item 3</a></li>
-
-            <li><a href="#">Menu item 4</a></li>
-
-        </ul>
-
-    </div>
-
-    <div>
-        <ul class="menu-4">
-            <li><a href="#">Uno</a></li>
-            <li><a href="#">Dos</a></li>
-            <li><a href="#">Tes</a></li>
-            <li><a href="#">Qatro</a></li>
-        </ul>
-    </div>
-
-		<ul class="menu-5">
-			<a href=""><li></li></a>
-			<a href=""><li></li></a>
-			<a href=""><li></li></a>
-			<a href=""><li></li></a>
-			<a href=""><li></li></a>
 		</ul>
 
-		<a class="link-button" href="">Кнопка</a>
+	</div>
+
+	<div>
+		<ul class="menu-4">
+			<li><a href="#">Uno</a></li>
+			<li><a href="#">Dos</a></li>
+			<li><a href="#">Tes</a></li>
+			<li><a href="#">Qatro</a></li>
+		</ul>
+	</div>
+
+	<ul class="menu-5">
+		<a href="">
+			<li></li>
+		</a>
+		<a href="">
+			<li></li>
+		</a>
+		<a href="">
+			<li></li>
+		</a>
+		<a href="">
+			<li></li>
+		</a>
+		<a href="">
+			<li></li>
+		</a>
+	</ul>
+
+	<a class="link-button" href="">Кнопка</a>
 
 
 
